--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,2 +1,25 @@
-//Esta carpeta va a almacenar todos los archivos que le vamos a enviar al navegador.
-//Es decir todas las vistas HTML
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Notes app</title>
+    <!-- bootstrap 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+
+    <p>Navigation</p>
+
+      <main class="container">
+      {{{body}}}
+      </main>
+      
+    <P>Footer</P>
+    
+</body>
+</html>
